Mon Sep 28 13:18:05 1998  Douglas C. Schmidt  <schmidt@tango.cs.wustl.edu>

	* tests/test.cpp: Fixed the signature of in_word_set() to be
	  consistent with the new gperf.  Thanks to David Levine and
	  Carlos O'Ryan for this fix.

Sun Sep 27 00:04:18 1998  Douglas C. Schmidt  <schmidt@tango.cs.wustl.edu>

	* src/Key_List.cpp (dump): Reverted back to using int for
 	  keyword_width to keep certain compilers happy.  Thanks to David
 	  Levine for reporting this.

	* src/Key_List: MAke sure that we don't generate the lookup table
 	  twice if we're forced to change to the switch format.

	* src/Key_List: Replaced the use of "int" with "unsigned int" for
 	  parameters and hash values.

	* src/Key_List: Fixed the code so that if we change over to using
 	  the switch statement then we use the already generated keyword
 	  table appropriately.  This prevents unnecessary warnings from
 	  some C++ compilers.  Thanks to David Levine for reporting this.

	* src/Key_List.cpp (output): If it's not possible to use the
 	  lookup_array implementation of -D (e.g., because there aren't
 	  enough empty slots in the lookup_array), then default to using
 	  -S1 option...  This fixes a nasty bug that's been in gperf for
 	  years....

	* src/Key_List.cpp: (output_lookup_array): Added a "return 0" to
 	  make the C++ compiler happy.  Thanks to David for noticing this.

	* tests/c++-res.exp: Added a new test for C++ keywords.

	* tests/corba.gperf: Added a proper test for CORBA keywords.

Sat Sep 26 15:32:56 1998  Douglas C. Schmidt  <schmidt@tango.cs.wustl.edu>

	* src/Hash_Table.cpp (find): Fixed a bug in the increment
 	  computation that arose if the -n option was given.

	* src: Removed all set_ and get_ prefixes to be more consistent
 	  with ACE programming guidelines.

	* src: GPERF now Purifies cleanly.

	* src/Gen_Perf: Cleaned up the code so that if errors occur they
 	  get handled properly.

	* src/List_Node: Added a destructor to remove the memory when
	  we're done.
