@@ -31,7 +31,7 @@ hash (str, len)
      257, 257, 257, 257, 257, 257, 257, 257, 257, 257,
      257, 257, 257, 257, 257, 257, 257, 257,
     };
-  int hval = 0;
+  unsigned int hval = 0;
 
   switch (len)
     {
@@ -169,7 +169,7 @@ in_word_set (str, len)
 
   if (len <= MAX_WORD_LENGTH && len >= MIN_WORD_LENGTH)
     {
-      int key = hash (str, len);
+      unsigned int key = hash (str, len);
 
       if (key <= MAX_HASH_VALUE && key >= MIN_HASH_VALUE)
         {
