@@ -14,7 +14,7 @@ struct resword { char *name; short token; enum rid rid;};
 
 inline
 static unsigned int
-hash (const char *str, int len)
+hash (const char *str, unsigned int len)
 {
   static const unsigned char asso_values[] =
     {
@@ -32,7 +32,7 @@ hash (const char *str, int len)
       20,  15,  42, 148,  31,   5,  26,  39,  32,  10,
      148,  40, 148, 148, 148, 148, 148, 148,
     };
-  int hval = len;
+  unsigned int hval = len;
 
   switch (hval)
     {
@@ -49,7 +49,7 @@ hash (const char *str, int len)
 
 inline
 const struct resword *
-in_word_set (const char *str, int len)
+in_word_set (const char *str, unsigned int len)
 {
   static const struct resword wordlist[] =
     {
@@ -152,7 +152,7 @@ in_word_set (const char *str, int len)
 
   if (len <= MAX_WORD_LENGTH && len >= MIN_WORD_LENGTH)
     {
-      int key = hash (str, len);
+      unsigned int key = hash (str, len);
 
       if (key <= MAX_HASH_VALUE && key >= MIN_HASH_VALUE)
         {
